# lmelp

./: .coveragerc  .cruft.json  .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  README.md  REFACTORING_DOCKER_INSTRUCTIONS.md  debug_parser.py  index.html  mkdocs.yml  objects.inv  package.json  pyproject.toml  pytest.ini  readme_doc.md  readme_google.md  readme_markdown.md  readme_vscode_hints.md  simple_test.py  test_debug.py  test_parser.py  vscode_hints.md
.claude/: settings.local.json
.claude/commands/: fix-issue.md  stocke-memoire.md
.devcontainer/: .p10k.zsh  Dockerfile  devcontainer.json  postCommand.sh  postCreateCommand.sh  repo_name.env  requirements.txt  setupZsh.sh
.devcontainer/linux/: devcontainer.json  postCommand.sh  setupZsh.sh
.devcontainer/wsl/: devcontainer.json  postCommand.sh  requirements.txt  setupZsh.sh
.devcontainer/wsl_lmelp/: devcontainer.json  postCommand.sh  setupZsh.sh
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  tests.yml
.kiro/: env.md
.streamlit/: config.toml
config/: index.html
db/: lmelp.drawio
db/masque_et_la_plume/: episodes.bson  episodes.metadata.json
db/podcasts/: episodes.bson  episodes.metadata.json
deployment/: .env.template  README.md  docker-compose.yml
deployment/docker-local-usage/: index.html
deployment/github-actions-setup/: index.html
deployment/issue-dockerisation/: index.html
development-workflow/: index.html
docker/: .env.template  DEPLOYMENT.md  Dockerfile  IMAGES.md  README.md  docker-compose.nas.yml  docker-compose.watchtower.yml  docker-compose.yml  test-local-detached.sh  test-local.sh
docker/deployment/: .env.template  README.md  docker-compose.yml
docker/scripts/: backup-db.sh  logs.sh  start.sh  stop.sh  test-build.sh  update.sh
docs/: .nav.yml  config.md  development-workflow.md  index.md  llm.md  mongo.md  mongo_auteur.md  mongo_episode.md  mongo_livre.md  readme_data_model.md  readme_doc.md  readme_github.md  readme_google.md  readme_import_strategy.md  readme_markdown.md  readme_unit_test.md  readme_uv_devcontainer.md  readme_vscode_hints.md  rss.md  web.md  whisper.md
docs/api/: README.md  config.md  llm.md  mongo.md  mongo_auteur.md  mongo_episode.md  mongo_livre.md  rss.md  web.md  whisper.md
docs/deployment/: docker-local-usage.md  github-actions-setup.md  issue-dockerisation.md
docs/dev/: .nav.yml  README.md  development-workflow.md  docker-local-usage.md  github-actions-setup.md  issue-dockerisation.md  readme_doc.md
docs/user/: README.md
env/: gemini.txt  streamlit_korben.txt  whisper.txt
llm/: index.html
mongo/: index.html
mongo_auteur/: index.html
mongo_episode/: index.html
mongo_livre/: index.html
nbs/: 01 whisper.ipynb  02 download episodes.ipynb  03 episodes to mongodb.ipynb  03 mongodb.ipynb  04 download episodes.ipynb  05 identifier cine livre theatre.ipynb  06 sync mongo to nas.ipynb  07 connection mongo.ipynb  07 download mp3 from db info.ipynb  08 download mp3 from db info.ipynb  09 whisper m4a.ipynb  09 whisper mp3.ipynb  10 update whisper.ipynb  11 gemini on transcription.ipynb  12 calculer toutes les syntheses de critiques.ipynb  13 use mongo and llamaindex to store entities - azure openai.ipynb  13 use mongo and llamaindex to store entities.ipynb  20 workflow sur flux RSS.ipynb  21 read historical episodes.ipynb  22 whisper on surface.ipynb  30 eda sur transcriptions.ipynb  31 ui episodes dataframe.ipynb  32 doublons episodes.ipynb  33 add Auteurs openai.ipynb  33 add Auteurs.ipynb  34 smolagents.ipynb  34 test openai litellm.ipynb  35 corrections sur auteurs.ipynb  36 store all authors.ipynb  37 page auteurs.ipynb  38 page livres.ipynb  __init__.py  avis_critiques_parser.py  avis_search.py  config.py  connection.py  date_utils.py  download.py  helper.ipynb  helper.py  (+25 more)
nbs/course/: 1 - code_agents.ipynb  2 - tool_calling_agents.ipynb  3 - multiagent_notebook.ipynb  4 - llamaindex.ipynb
readme_data_model/: index.html
readme_doc/: index.html
readme_github/: index.html
readme_google/: index.html
readme_import_strategy/: index.html
readme_markdown/: index.html
readme_unit_test/: index.html
readme_uv_devcontainer/: index.html
readme_vscode_hints/: index.html
rss/: index.html
scripts/: backup_mongodb.sh  create-docker-issue.sh  from_francois_markdown_to_qa_dataset.py  get_all_transcriptions.py  get_one_transcription.py  lmelp_get_one_transcription.sh  lmelp_rss_to_mongodb.sh  lmelp_store_all_auteurs.sh  migrate_avis_to_episode_livres.py  store_all_auteurs_from_all_episodes.py  store_all_auteurs_from_all_episodes.txt  store_all_auteurs_from_episode.py  store_all_legacy_episodes.py  test_migrate_avis_to_episode_livres.py  update_emissions.py
scripts/archives/: ratio.sh
scripts/from_host/: get_container.sh  host_lmelp_download_nouvel_episode.sh  host_lmelp_get_transcription.sh  host_lmelp_store_all_auteurs.sh  host_lmelp_ui.sh
scripts/sanity-check/: README.md  azure_models.txt  gpt-4o.yaml  try_azure_openai.py
scripts/whisper.cpp/: whisper.sh
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/llm/: index.html
site/mongo/: index.html
site/mongo_auteur/: index.html
site/mongo_episode/: index.html
site/rss/: index.html
site/search/: search_index.json
site/web/: index.html
site/whisper/: index.html
tests/: __init__.py  conftest.py  coverage.xml  requirements.txt
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_episode_livre_integration.py  test_favicon_usage.py  test_favicons.py  test_streamlit_config.py  test_streamlit_patch.py  test_workflows.py
tests/ui/: __init__.py  test_streamlit.py
tests/unit/: __init__.py  test_avis_critiques_parser.py  test_config.py  test_date_utils.py  test_episode_livre.py  test_fixtures.py  (+9 more)
ui/: from_korben_remove.py  hello.py  host_lmelp_ui.sh  lmelp.py  lmelp_ui.sh  ui_tools.py
vibe/: Adaptation pour Projets Existants.txt  README.md  Système de Développement LLM en 4 Phases.txt  implementation-plan.md
web/: index.html
whisper/: index.html
(+99 files in other folders)
