[project]
name = "lmelp"
version = "0.1.0"
description = "le masque et la plume transcript"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "lmelp Team"}
]
keywords = ["data-science", "jupyter", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Jupyter
    "ipykernel",
    "ipywidgets",
    # Data
    "pandas",
    "numpy",
    "matplotlib",
    "plotly",
    "rich",
    # Web / RSS
    "feedparser",
    "beautifulsoup4",
    "lxml",
    "html5lib",
    "requests",
    # Database
    "pymongo",
    # Config
    "python-dotenv",
    "gitpython",
    # Audio / ML
    "transformers",
    "accelerate",
    "pydub",
    "soundfile",
    # LLM / AI
    "llama-index-core",
    "llama-index-llms-openai",
    "llama-index-embeddings-openai",
    "llama-index-llms-azure-openai",
    "llama-index-embeddings-azure-openai",
    "llama-index-llms-huggingface-api",
    "llama-index-llms-vertex",
    "google-generativeai",
    "google-search-results",
    "smolagents[litellm]",
    # UI
    "streamlit",
    "streamlit-extras",
    "streamlit-card",
    # Utils
    "thefuzz",
    "pytz>=2026.1.post1",
]

[project.optional-dependencies]
dev = [
    "cruft",
    "virtualenv",
    "pre-commit",
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-env>=0.8",
    "pytest-cov>=4.0",
    "ruff",
    "mypy",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "click==8.2.1", # https://github.com/mkdocs/mkdocs/issues/4032
    "mkdocstrings[python]",
    "mkdocs-include-markdown-plugin",
    "mkdocs-awesome-nav",
    "pymdown-extensions",
    "mkdocs-rtd-dropdown",
    "nbdev>=2.4.6",
]

[project.urls]
Homepage = "https://github.com/castorfou/lmelp"
Documentation = "https://castorfou.github.io/lmelp"
Repository = "https://github.com/castorfou/lmelp.git"
Issues = "https://github.com/castorfou/lmelp/issues"

[project.scripts]
lmelp_setup = "scripts.setup:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "scripts*", "ui*", "docs*", "vibe*", "db*", "audios*", "site*"]

# Configuration uv pour la reproductibilité
[dependency-groups]
dev = ["pytest",]

# Configuration Ruff - Linter et formateur Python moderne
[tool.ruff]
# Longueur de ligne (cohérent avec black)
line-length = 88

# Fichiers à exclure
extend-exclude = [
    "data/*",
    "models/*",
    "logs/*",
    ".jupyter/*",
]

# Version Python cible
target-version = "py311"

[tool.ruff.lint]
# Règles activées
extend-select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ERA",    # eradicate (commented code)
    "PD",     # pandas-vet
    "NPY",    # numpy-specific rules
]

# Règles ignorées (adaptées Data Science)
ignore = [
    "E501",   # Line too long (black/ruff format s'en occupe)
    "B905",   # zip() sans strict= (Python 3.10+)
    "RET504", # Assign + return -> return direct (parfois moins lisible)
    "N806",   # Variable in function should be lowercase (DB_HOST, DB_NAME conventions)
    "E741",   # Ambiguous variable name (l, O, I — usage courant en data science)
]

[tool.ruff.format]
# Style de formatage
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Configuration isort intégrée
known-first-party = ["lmelp"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pep8-naming]
# Convention de nommage adaptée Data Science
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
# Règles spécifiques par type de fichier
"notebooks/*.py" = ["E402", "F401", "F841"]  # Imports, unused vars OK en notebooks
"nbs/*.ipynb" = ["I001", "E402", "F401", "F841"]  # black-jupyter gère l'ordre des imports
"scripts/*.py" = ["T201"]                    # print() OK dans les scripts
"tests/*.py" = ["S101", "PLR2004"]          # assert OK, magic values OK en tests

# Configuration MyPy - Vérification de types statique
[tool.mypy]
# Version Python et compatibilité
python_version = "3.11"
platform = "linux"

# Chemins à analyser : exclure src/ car déjà dans sys.path via editable install
files = ["tests"]

# Ne pas chercher de namespace packages pour éviter la détection en double
namespace_packages = false

# Niveau de vérification
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Configuration stricte progressive
disallow_any_generics = false        # Autorisé au début
disallow_untyped_calls = false       # Autorisé au début
disallow_untyped_defs = false        # Autorisé au début
disallow_incomplete_defs = true      # Fonctions partiellement typées interdites
disallow_untyped_decorators = false  # Autorisé au début
disallow_subclassing_any = true
no_implicit_reexport = true

# Gestion des imports
ignore_missing_imports = false
follow_imports = "normal"

# Configuration pour Data Science
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "seaborn.*",
    "sklearn.*",
    "scipy.*",
    "plotly.*",
]
ignore_missing_imports = true

# Configuration spéciale pour notebooks
[[tool.mypy.overrides]]
module = "notebooks.*"
ignore_errors = true

# Configuration tests
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "pytest",
]
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
